...
              ),
            ),
            Padding(
              padding: const EdgeInsets.only(left: 30, right: 30, top: 20),
              child: Card(
                child: TextFormField(
                  key: ValueKey('orderaddress'),
                  validator: (text) {
                    if (text == null || text.isEmpty) {
                      return 'Address is required';
                    }
                    return null;
                  },
...
                  )
                : SizedBox(height: 0.0),
            Padding(
              padding: const EdgeInsets.only(left: 30, right: 30, top: 20),
              child: Card(
                child: TextFormField(
                  key: ValueKey("ordercontactnumber"),
                  validator: (text) {
                    if (text == null || text.isEmpty) {
                      return ("Contact Number is required");
                    }
                    return null;
                  },
...
                    border: OutlineInputBorder(
                        borderSide: new BorderSide(color: Colors.teal)),
                    labelText: 'Delivery Date',
                    suffixIcon: ButtonTheme(
                      minWidth: 0,
                      child: FlatButton(
                        key: ValueKey("orderdatepicker"),
                        child: const Icon(
                          Icons.calendar_today,
                          color: Colors.teal,
                        ),
                        onPressed: () {
                          showDatePicker(
...
              ),
            ),
            Padding(
              padding: const EdgeInsets.only(left: 40, right: 30, top: 10),
              child: Center(
                child: DropdownButton<String>(
                  key: ValueKey("orderpackage"),
                  items: pkgIDs.map((String pkg) {
                    return DropdownMenuItem<String>(
                      value: pkg,
                      child: Center(
                        child: Center(child: Text('Package: ${pkg}')),
                      ),
...
                  ),
            Padding(
              padding: const EdgeInsets.only(left: 30, right: 30, top: 10),
              child: Card(
                color: Colors.teal,
                child: FlatButton(
                  key: ValueKey("orderplace"),
                  child: Text(
                    'PLACE ORDER',
                    style: TextStyle(
                        color: Colors.white,
                        fontWeight: FontWeight.bold,
                        letterSpacing: 1.5,
...
