...
      var message = json.decode(response.body);
      this.setState(() {
        datasent = false;
      });
      if (message["error"] == "Another order is in progress.") {
        this.setState(() {
          orderinprogress = true;
        });
      } else if (message["error"] == false) {
        Navigator.pushAndRemoveUntil(
            context,
            MaterialPageRoute(builder: (context) => Order_Receipt()),
            (_) => false);
...
                      SizedBox(height: 120.0),
                      ButtonTheme(
                        minWidth: double.infinity,
                        height: 50.0,
                        buttonColor: Colors.teal,
                        child: RaisedButton(
                          key: ValueKey("confirmorder"),
                          color: Colors.teal,
                          onPressed: datasent ? null : _submit,
                          child: Text("Confirm Order",
                              textAlign: TextAlign.center,
                              style: TextStyle(
                                  color: Colors.white,
...
