...
                    });
                  },
                ),
        ],
        backgroundColor: Colors.teal,
      ),
      drawer: DrawerDetails(),
      body: searchCompanies.length > 0
          ? new ListView.builder(
              //vertical by default
              itemCount: searchCompanies.length,
              itemBuilder: (BuildContext context, int index) {
                return new Card(
...
                                              style:
                                                  TextStyle(color: Colors.teal),
                                            ),
                                            actions: <Widget>[
                                              RaisedButton(
                                                child: Text(
                                                  'OK',
                                                  style: TextStyle(
                                                      color: Colors.white),
                                                ),
                                                color: Colors.teal,
                                                onPressed: () {
                                                  Navigator.of(context).pop();
...
